<resources>
    <string name="app_name">Full_Time_Wannabe</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



    <string name="loading">LOADING...</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="pw">Password</string>
    <string name="phone">Phone #</string>
    <string name="emp_bank">Bank</string>
    <string name="emp_account">Account</string>
    <string name="boss">사장님</string>
    <string name="emp">알바생</string>
    <string name="account">급여계좌</string>
    <string name="wp">근무지</string>

    <string name="btn_login">로그인</string>
    <string name="btn_signin">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_withdraw">회원탈퇴</string>
    <string name="btn_as_boss">사장님으로\n 회원가입</string>
    <string name="btn_as_emp">알바생으로\n 회원가입</string>

    <string name="title_activity_chat">chat</string>

    <string name="hint_id">ID</string>
    <string name="hint_pw">PassWord</string>
    <string name="hint_send_msg">메세지를 입력하세요</string>
    <string name="hint_edit_phone">변경할 전화번호를 입력하세요</string>
    <string name="hint_edit_wp">변경할 전화번호를 입력하세요</string>
    <string name="hint_edit_account">변경할 계좌를 입력하세요</string>
    <string name="hint_edit_bank">변경할 은행를 입력하세요</string>

    <string name="attend_attend">출근</string>
    <string name="attend_exit">퇴근</string>
    <string name="attend_time">근무시간</string>
    <string name="attend_alter">교대자</string>
    <string name="attend_db_month">월 출근 현황</string>
    <string name="attend_db_day">일 출근중</string>
    <string name="attend_db_late">지각</string>
    <string name="attend_notice">(클릭시 매장 Wifi로 자동 연결됩니다)</string>

</resources>

