<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/ed_id"
            style="@style/ed.base"
            android:background="@drawable/ed_dialog"
            android:hint="@string/id"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/ed_pw"
            style="@style/ed.base"
            android:background="@drawable/ed_dialog"
            android:hint="@string/pw"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/ed_name"
            style="@style/ed.base"
            android:background="@drawable/ed_dialog"
            android:hint="@string/name"
            android:inputType="text"
            android:privateImeOptions="defaultInputmode=korean" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/ed_phone"
            style="@style/ed.base"
            android:background="@drawable/ed_dialog"
            android:hint="@string/phone"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>