<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bmjua"
        android:text="@string/hint_edit_bank"
        android:textAlignment="center"
        android:textColor="@color/baseBlueLight"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tv.base"
        android:entries="@array/bank"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bmjua"
        android:text="@string/hint_edit_account"
        android:textAlignment="center"
        android:textColor="@color/baseBlueLight"
        android:textSize="18sp"
        android:textStyle="italic" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/ed_account"
            style="@style/ed.base"
            android:background="@drawable/ed_dialog"
            android:hint="@string/emp_account"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>